src/test/deca/syntax/valid/parser/oracle/class_with_one_method3.deca
class A{
    int f(){ int i = 0; 5;}
}