src/test/deca/syntax/invalid/test_dir/added/parser/decl_list_without_semicolon.deca
{
	int i = 0, j
}
